style.css
#gameArea {
position:absolute;
left:50%;
top:50%;
border:1px solid;
}

.gameScreen {
    background: rgb(228,245,252); /* Old browsers */
    background: -moz-radial-gradient(center, ellipse cover,  rgba(228,245,252,1) 0%, rgba(153,209,255,1) 100%); /* FF3.6+ */
    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(228,245,252,1)), color-stop(100%,rgba(153,209,255,1))); /* Chrome,Safari4+ */
    background: -webkit-radial-gradient(center, ellipse cover,  rgba(228,245,252,1) 0%,rgba(153,209,255,1) 100%); /* Chrome10+,Safari5.1+ */
    background: -o-radial-gradient(center, ellipse cover,  rgba(228,245,252,1) 0%,rgba(153,209,255,1) 100%); /* Opera 12+ */
    background: -ms-radial-gradient(center, ellipse cover,  rgba(228,245,252,1) 0%,rgba(153,209,255,1) 100%); /* IE10+ */
    background: radial-gradient(center, ellipse cover,  rgba(228,245,252,1) 0%,rgba(153,209,255,1) 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e4f5fc', endColorstr='#99d1ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
    border:2px solid #aaaaff;
    position:absolute;
    width:100%;
    height:100%;
}
.otherScreen {
    border:2px solid #aaaaff;
    position:absolute;
    width:100%;
    height:100%;
}

#profileDiv {
    background: rgba(100, 100, 200, 0.6);
    border-radius: 12px;
    width: 20%;
    height: 8%;
    padding: 1%;
    margin: 1%;
}

.socialIcon {
    width: 30%;
    height: 98%;
}

